@@ -294,7 +294,8 @@ bar to navigate among history pages.
 <p>
 When you follow several links across different web pages, they are remembered in
 case you can to go back. Use the "Back" and "Forward" buttons of the panel to go
-to the previous or next page.
+to the previous or next page. Click with the left button to open the page in the
+same tab or use the middle button to open it in a new tab.
 <p>
 You can also right-click on the Back or Forward buttons to open a menu with the
 list of previous or next pages available, so you can jump directly to them. Use
