@@ -29,8 +29,10 @@ void a_UIcmd_open_url(BrowserWindow *bw, const DilloUrl *url);
 void a_UIcmd_open_url_nw(BrowserWindow *bw, const DilloUrl *url);
 void a_UIcmd_open_url_nt(void *vbw, const DilloUrl *url, int focus);
 void a_UIcmd_back(void *vbw);
+void a_UIcmd_back_nt(void *vbw);
 void a_UIcmd_back_popup(void *vbw, int x, int y);
 void a_UIcmd_forw(void *vbw);
+void a_UIcmd_forw_nt(void *vbw);
 void a_UIcmd_forw_popup(void *vbw, int x, int y);
 void a_UIcmd_home(void *vbw);
 void a_UIcmd_zoom_in(void *vbw);
