@@ -12,6 +12,8 @@ dillo-3.3.0 [Unreleased]
  - Add about:keys to display current keyboard shortcuts.
  - Control + left click opens links in new tab (emulates mouse middle button).
    Patches: Rodrigo Arias Mallo
++- Middle click on back or forward button opens page in new tab.
+   Patches: Alex
 
 dillo-3.2.0 [Jan 18, 2025]
 
